# test

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  main.c  test.c  test.h
.deps/: main.Po  test.Po
